# gcs-trajectory-optimizer

./: README.md  planner_params.yaml  visualize_trajs.py
gcs_core/: CMakeLists.txt  corridor_builder.cpp  corridor_builder.hpp  demo.cpp  gcs_pipeline.cpp  gcs_pipeline.hpp  gcs_pipeline_planners.cpp  package.xml  region_viz.cpp  region_viz.hpp
gcs_core/include/gcs_core/: bezier.hpp  bezier_planner.hpp  composite_planner.hpp  constraint_builder.hpp  convex_region.hpp  corridor_builder.hpp  free_space_regions.hpp  gcs_core.hpp  gcs_types.hpp  ground_corridor.hpp  ground_plane.hpp  point_index.hpp  qp_solver.hpp  region_viz.hpp
gcs_core/src/: bezier.cpp  bezier_planner.cpp  composite_planner.cpp  convex_region.cpp  corridor_builder.cpp  free_space_regions.cpp  ground_corridor.cpp  ground_plane.cpp  point_index.cpp  qp_solver.cpp  region_viz.cpp
gcs_planner/: CMakeLists.txt  package.xml
gcs_planner/config/: planner_params.yaml
gcs_planner/include/gcs_planner/: orientation.hpp  path_io.hpp  planner_node.hpp  trajectory_executor_node.hpp  trajectory_msg_builders.hpp  vertical_profile.hpp
gcs_planner/launch/: planner.launch.py
gcs_planner/rviz/: gcs_planner.rviz
gcs_planner/src/: main.cpp  orientation.cpp  path_io.cpp  planner_node.cpp  trajectory_executor_main.cpp  trajectory_executor_node.cpp  trajectory_msg_builders.cpp  vertical_profile.cpp
planner_msgs/: CMakeLists.txt  package.xml
planner_msgs/msg/: Trajectory.msg  TrajectoryPoint.msg
traversability_core/: CMakeLists.txt  package.xml
traversability_core/include/traversability_core/: occupancy_grid.hpp  robot_model.hpp  trav_types.hpp  traversability_core.hpp  traversability_map.hpp  voxel_grid.hpp
traversability_core/src/: occupancy_grid.cpp  robot_model.cpp  trav_types.cpp  traversability_map.cpp  voxel_grid.cpp
