<?xml version="1.0"?>
<package format="3">
  <name>gcs_planner</name>
  <version>0.0.1</version>
  <description>ROS2 node: PCD -> corridor -> GCS Bezier trajectory, with RViz viz.</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>eigen3_cmake_module</build_depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>planner_msgs</depend>
  <depend>gcs_core</depend>
  <depend>traversability_core</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>
  <depend>eigen</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>