<?xml version="1.0"?>
<package format="3">
  <name>traversability_core</name>
  <version>0.0.1</version>
  <description>ROS-agnostic terrain traversability mapping + 2D occupancy grid generation for 2.5D ground-corridor planning.</description>
  <maintainer email="dfpetriz@caltech.edu">deon</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>eigen3_cmake_module</build_depend>
  <build_export_depend>eigen3_cmake_module</build_export_depend>
  <depend>eigen</depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
